fixed the z-index issue

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -111,6 +111,7 @@
     left: 0;
     padding-top: 117px;
     height: 30%;
+    z-index: 200;
   }
 
   .sumit2014,
@@ -177,7 +178,8 @@
 
   .speaker4,
   .speaker5,
-  .speaker6 {
+  .speaker6,
+  .speaker {
     display: none;
   }
 
